--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </td>
         <td width=550px align=left>
         <!-- <p style="margin-top:4px;"></p> -->
-        <p style="text-align:left;"><b><span style="font-size:20pt">Citation</span></b><br/><span style="font-size:6px;">&nbsp;<br/></span> <span style="font-size:15pt">Jianren Wang*, Zhaoyuan Fang*, Hang Zhao. <b>AlignNet: A Unifying Approach to Audio-Visual Alignment<br/></b> In <i>WACV</i> 2020.</span></p>
+        <p style="text-align:left;"><b><span style="font-size:20pt">Citation</span></b><br/><span style="font-size:6px;">&nbsp;<br/></span> <span style="font-size:15pt">Jianren Wang, Siddharth Ancha, Yi-Ting Chen, David Held.<br/> <b>Self-supervised 3D Data Association<br/></b> In <i>IROS</i> 2020.</span></p>
         <!-- <p style="margin-top:20px;"></p> -->
         <span style="font-size:20pt"><a shape="rect" href="javascript:togglebib('alignnet_bib')" class="togglebib">[Bibtex]</a></span>
         <span style="font-size:20pt"><a href=''>[Paper]</a></span>
