--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
         <tr>
         <td width=250px align=left>
         <!-- <p style="margin-top:4px;"></p> -->
-        <a href=''><img class="layered-paper-big" style="height:150px" src="./resources/paper_shot.jpg"/></a>
+        <a href=''><img class="layered-paper-big" style="height:150px" src="./resources/paper_shot.JPG"/></a>
         </td>
         <td width=50px align=center>
         </td>
