--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
     <table align=center width=800px>
       <tr><td width=800px><left>
       <center><h1>Acknowledgements</h1></center>
-      <br>
+      This material is based upon work supported by the National Science Foundation under Grant No.  IIS-1849154, by the United States Air Force and DARPA under Contract No. FA8750-18-C-0092, and by the Honda Research Institute USA.<br>
       </left></td></tr>
     </table>
   <br><br>
