--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 
 <body>
       <br>
-      <center><span style="font-size:44px;font-weight:bold;">Self-supervised 3D Data Association</span></center><br/>
+      <center><span style="font-size:44px;font-weight:bold;">Uncertainty-aware Self-supervised 3D Data Association</span></center><br/>
       <table align=center width=800px>
       <tr>
         <td align=center width=150px>
