--- a/index.html
+++ b/index.html
@@ -164,17 +164,17 @@
           <tr>
             <td align=center width=200px><center><span style="font-size:22px"><a href='https://arxiv.org/pdf/2008.08173v1.pdf'>[Download Paper]</a></span></center></td>
             <td align=center width=200px><center><span style="font-size:22px"><a href='https://github.com/jianrenw/Self-Supervised-3D-Data-Association'>[GitHub Code]</a></span></center></td>
-            <td align=center width=200px><center><span style="font-size:22px"><a href=''>[Slides]</a></span></center></td>
+            <td align=center width=200px><center><span style="font-size:22px"><a href='./resources/slides.pptx'>[Slides]</a></span></center></td>
             <td align=center width=200px><center><span style="font-size:22px"><a href=''>[Poster]</a></span></center></td>
           <tr/>
       </table><br/>
 
-      <!-- <table align=center width=300px>
+      <table align=center width=300px>
       <tr><td align=center width=300px>
-      <iframe width="560" height="315" src="" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      <iframe width="560" height="315" src="https://www.youtube.com/embed/UkbiusxvAyk" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </td></tr>
       </table>
-      <br><hr> -->
+      <br><hr>
 
       <div style="width:800px; margin:0 auto; text-align=center">
         3D object trackers usually require training on large amounts of annotated data that is expensive and time-consuming to collect. Instead, we propose leveraging vast unlabeled datasets by self-supervised metric learning of 3D object trackers, with a focus on data association. Large scale annotations for unlabeled data are cheaply obtained by automatic object detection and association across frames. We show how these self-supervised annotations can be used in a principled manner to learn point-cloud embeddings that are effective for 3D tracking. We estimate and incorporate uncertainty in self-supervised tracking to learn more robust embeddings, without needing any labeled data. We design embeddings to differentiate objects across frames, and learn them using uncertainty-aware self-supervised training. Finally, we demonstrate their ability to perform accurate data association across frames, towards effective and accurate 3D tracking.
